# rusty-ticker

./: Cargo.toml  Embed.toml  README.md  memory.x
.cargo/: config.toml
src/: joystick.rs  main.rs
